Adjust container and add models

--- a/NancyApi/NancyApi.Test/NancyApi.Test.csproj
+++ b/NancyApi/NancyApi.Test/NancyApi.Test.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NancyApi\NancyApi.csproj" />
+    <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
+    <ProjectReference Include="..\Services.Concrete\Services.Concrete.csproj" />
   </ItemGroup>
 
 </Project>
