--- a/NancyApi/NancyApi/NancyApi.csproj
+++ b/NancyApi/NancyApi/NancyApi.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Nancy" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
+    <ProjectReference Include="..\Services.Concrete\Services.Concrete.csproj" />
+  </ItemGroup>
+
 </Project>
