--- a/NancyApi/Services.Concrete/Services.Concrete.csproj
+++ b/NancyApi/Services.Concrete/Services.Concrete.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0-preview5.19227.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
   </ItemGroup>
 
