--- a/NancyApi/NancyApi/NancyApi.csproj
+++ b/NancyApi/NancyApi/NancyApi.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Owin" Version="2.2.0" />
     <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="Nancy.Validation.FluentValidation" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
