--- a/NancyApi/NancyApi/appsettings.json
+++ b/NancyApi/NancyApi/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "NyTimesApi": {
+  "Api": {
     "BaseUrl": "https://api.nytimes.com/svc/topstories/v2/",
-    "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ"
+    "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
+    "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}"
   }
 }
