--- a/NYTimes/NYTimes.NancyApi.Test/NYTimes.NancyApi.Test.csproj
+++ b/NYTimes/NYTimes.NancyApi.Test/NYTimes.NancyApi.Test.csproj
@@ -16,9 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NancyApi\NancyApi.csproj" />
-    <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
-    <ProjectReference Include="..\Services.Concrete\Services.Concrete.csproj" />
+    <ProjectReference Include="..\NYTimes.NancyApi\NYTimes.NancyApi.csproj" />
+    <ProjectReference Include="..\NYTimes.Services.Abstractions\NYTimes.Services.Abstractions.csproj" />
+    <ProjectReference Include="..\NYTimes.Services\NYTimes.Services.csproj" />
   </ItemGroup>
 
 </Project>
