--- a/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
+++ b/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
-    <ProjectReference Include="..\Services.Concrete\Services.Concrete.csproj" />
+    <ProjectReference Include="..\NYTimes.Services.Abstractions\NYTimes.Services.Abstractions.csproj" />
+    <ProjectReference Include="..\NYTimes.Services\NYTimes.Services.csproj" />
   </ItemGroup>
 
 </Project>
