--- a/NYTimes/NYTimes.Services/NYTimes.Services.csproj
+++ b/NYTimes/NYTimes.Services/NYTimes.Services.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
+    <ProjectReference Include="..\NYTimes.Services.Abstractions\NYTimes.Services.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
