--- a/NYTimes/NYTimes.NancyApi/appsettings.json
+++ b/NYTimes/NYTimes.NancyApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Api": {
-    "BaseUrl": "https://api.nytimes.com/svc/topstories/v2/",
+    "BaseUrl": "https://api.nytimes.com/",
     "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
     "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}"
   }
