--- a/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
+++ b/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0-preview5.19227.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.11.0-rc1" />
     <PackageReference Include="xunit" Version="2.4.0" />
