--- a/NYTimes/NYTimes.Services/NYTimes.Services.csproj
+++ b/NYTimes/NYTimes.Services/NYTimes.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0-preview5.19227.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="RestSharp" Version="106.6.9" />
   </ItemGroup>
