--- a/NYTimes/NYTimes.NancyApi/appsettings.json
+++ b/NYTimes/NYTimes.NancyApi/appsettings.json
@@ -3,5 +3,17 @@
     "BaseUrl": "https://api.nytimes.com/",
     "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
     "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
