Add header to allow to use API from angular local application running via @angular/cli

--- a/NYTimes/NYTimes.NancyApi/appsettings.json
+++ b/NYTimes/NYTimes.NancyApi/appsettings.json
@@ -2,7 +2,10 @@
   "Api": {
     "BaseUrl": "https://api.nytimes.com/",
     "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
-    "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}"
+    "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}",
+    "Headers": {
+        "AccessControlAllowOrigin": "http://localhost:4200"
+    }
   },
   "Serilog": {
     "MinimumLevel": "Information",
