--- a/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
+++ b/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0-preview5.19227.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.11.0-rc1" />
+    <PackageReference Include="SpecFlow" Version="3.0.220" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.220" />
+    <PackageReference Include="SpecFlow.xUnit" Version="3.0.220" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
@@ -17,6 +20,21 @@
   <ItemGroup>
     <ProjectReference Include="..\NYTimes.Services.Abstractions\NYTimes.Services.Abstractions.csproj" />
     <ProjectReference Include="..\NYTimes.Services\NYTimes.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Test.feature.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Test.feature</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Test.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Test.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
   </ItemGroup>
 
 </Project>
