Start to use BDD and improve implementation of article service

--- a/NYTimes/NYTimes.NancyApi/appsettings.json
+++ b/NYTimes/NYTimes.NancyApi/appsettings.json
@@ -1,22 +1,23 @@
 {
-  "Api": {
-    "BaseUrl": "https://api.nytimes.com/",
-    "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
-    "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}",
-    "Headers": {
-        "AccessControlAllowOrigin": "http://localhost:4200"
-    }
-  },
-  "Serilog": {
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "File",
-        "Args": {
-          "path": "log.txt",
-          "rollingInterval": "Day"
+    "Api": {
+        "BaseUrl": "https://api.nytimes.com/",
+        "Source": "svc/topstories/v2/{section}.json",
+        "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
+        "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}",
+        "Headers": {
+            "AccessControlAllowOrigin": "http://localhost:4200"
         }
-      }
-    ]
-  }
+    },
+    "Serilog": {
+        "MinimumLevel": "Information",
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "log.txt",
+                    "rollingInterval": "Day"
+                }
+            }
+        ]
+    }
 }
