--- a/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
+++ b/NYTimes/NYTimes.Services.Test/NYTimes.Services.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -20,21 +20,6 @@
   <ItemGroup>
     <ProjectReference Include="..\NYTimes.Services.Abstractions\NYTimes.Services.Abstractions.csproj" />
     <ProjectReference Include="..\NYTimes.Services\NYTimes.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Test.feature.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Test.feature</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <SpecFlowFeatureFiles Update="Test.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>Test.feature.cs</LastGenOutput>
-    </SpecFlowFeatureFiles>
   </ItemGroup>
 
 </Project>
