Add new cucumber tests

--- a/NYTimes/NYTimes.NancyApi/appsettings.json
+++ b/NYTimes/NYTimes.NancyApi/appsettings.json
@@ -2,8 +2,8 @@
     "Api": {
         "BaseUrl": "https://api.nytimes.com/",
         "Source": "svc/topstories/v2/{section}.json",
-        "Id": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
-        "ShortUrlTemplate": "https://nyti.ms/{ShortUrlId}",
+        "Key": "k0XA0k0jJGAVuv8Jr5wAIcKDGPuznmRJ",
+        "ShortUrlTemplate": "https://nyti.ms/{Key}",
         "Headers": {
             "AccessControlAllowOrigin": "http://localhost:4200"
         }
